Move to java 11